--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
-    version="6.0">
-
+  version="6.0"
+  metadata-complete="false">
 	<display-name>CJA103G02</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
@@ -28,7 +28,7 @@
     <!-- EmpAuthorityServlet 的 URL 對應 -->
     <servlet-mapping>
         <servlet-name>EmpAuthorityServlet</servlet-name>
-        <url-pattern>/EmpAuthorityServlet</url-pattern>
+        <url-pattern>/empauthority/empauthority.do</url-pattern>
     </servlet-mapping>
 
 </web-app>
